--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 functions-framework==3.*
 urllib3==1.26.16
 requests==2.31.0
+python-dotenv==1.0.1
+confluent-kafka==2.5.3
 google-api-core==2.19.2
 google-api-python-client==2.147.0
 google-auth==2.34.0
